--- a/Croatian/main/SecurityCoreAdd.apk/res/values-hr/strings.xml
+++ b/Croatian/main/SecurityCoreAdd.apk/res/values-hr/strings.xml
@@ -81,7 +81,8 @@ ta će značajka biti automatski dodana u Drugi prostor."</string>
   <string name="back_double_tap">Dvaput dodirnite natrag</string>
   <string name="back_key">Natrag</string>
   <string name="back_tap">Dodirni stražnju stranu</string>
-  <string name="back_triple_tap">Trostruki dodir unatrag</string>
+  <string name="back_triple_tap">Trostruki dodir iza</string>
+  <string name="backtap_gesture_prompt">Dodirnite stražnju stranu uređaja, izbjegavajući stražnji zaslon</string>
   <string name="bind_device">Dodajte uređaje</string>
   <string name="bottom_bar_smallwindow_drag_text">Povucite ovdje za prikvačiti</string>
   <string name="bottom_bar_smallwindow_text">Otpustite za prikvačiti</string>
@@ -334,7 +335,7 @@ Provjerite je li naziv vaše korporacije točan. Prije aktivacije pročitajte i 
   <string name="freeform_demo_title_finish">Lijepo!</string>
   <string name="freeform_demo_title_skip">Preskoči</string>
   <string name="freeform_guide_dialog_freeform_controller_summary">"Povucite plutajući prozor za njegov gornji rub da biste ga pomicali
-ili dodirnite za prikaz više opcija"</string>
+ili dodirnite za prikaz više opcija."</string>
   <string name="freeform_guide_dialog_freeform_resize_summary">Povucite donje kutove za promjenu veličine</string>
   <string name="freeform_guide_dialog_freeform_title">Plutajući prozori</string>
   <string name="freeform_guide_dialog_split_double_summary">"Prevucite prstom od donje sredine prema gore
@@ -412,8 +413,11 @@ zatim povucite za pomicanje"</string>
   <string name="freeform_guide_to_sidehide_title">Skrivanje plutajućih prozora</string>
   <string name="freeform_guide_vedio_description">Dodirnite aplikaciju na bočnoj traci da je otvorite u plutajućem prozoru</string>
   <string name="freeform_recommend_open_switch_summary">Primajte prijedloge za otvaranje aplikacija na podijeljenom zaslonu ili plutajućim prozorima na temelju scenarija upotrebe</string>
-  <string name="freeform_recommend_open_switch_summary_fold">U nekim će se scenarijima preporučene aplikacije otvoriti u plutajućem prozoru na vanjskom zaslonu i u plutajućem prozoru ili na podijeljenom zaslonu na unutarnjem zaslonu</string>
-  <string name="freeform_recommend_open_switch_summary_phone">U nekim će scenarijima preporučene aplikacije biti otvorene u plutajućem prozoru</string>
+  <string name="freeform_recommend_open_switch_summary_fold">Primajte prijedloge za otvaranje aplikacija u plutajućim prozorima na vanjskom zaslonu i u plutajućim prozorima ili na podijeljenom zaslonu na unutarnjem zaslonu na temelju scenarija korištenja (npr. prilikom ažuriranja igara ili čekanja taksija)</string>
+  <string name="freeform_recommend_open_switch_summary_fold_no_joyose">Kada čekate taksi ili prijevoz, primit ćete upit za otvaranje aplikacije u plutajućem prozoru na vanjskom zaslonu ili u plutajućem prozoru ili podijeljenom zaslonu na unutarnjem zaslonu</string>
+  <string name="freeform_recommend_open_switch_summary_no_joyose">Kada čekate taksi ili prijevoz, primit ćete upit za otvaranje aplikacije u plutajućem prozoru ili podijeljenom zaslonu</string>
+  <string name="freeform_recommend_open_switch_summary_phone">Primajte prijedloge za otvaranje aplikacija u plutajućim prozorima na temelju scenarija korištenja (npr. prilikom ažuriranja igara ili čekanja taksija)</string>
+  <string name="freeform_recommend_open_switch_summary_phone_no_joyose">Kada čekate taksi ili dijeljenje prijevoza, primit ćete upit za otvaranje aplikacije u plutajućem prozoru</string>
   <string name="freeform_recommend_open_switch_title">Pametni prijedlozi</string>
   <string name="freeform_slide_to_small_freeform">Smanjite plutajući prozor</string>
   <string name="freeform_slide_to_small_freeform_summary">Pritisnite i držite radnu traku i povucite u kut</string>
@@ -434,17 +438,17 @@ zatim povucite za pomicanje"</string>
   <string name="gb_gpu_pannel_touch_ctl_dialog_message">"Dodirne kontrole su ažurirane. Sada možete pronaći povezane značajke u Gaming prečacima &gt; Poboljšane dodirne kontrole dok igrate igrice."</string>
   <string name="gb_gpu_pannel_touch_ctl_dialog_title">Nove dodirne kontrole</string>
   <string name="gd_setting_title">Bočna traka</string>
+  <string name="genimi_wake_up_guide_know">Razumijem</string>
   <string name="genimi_wake_up_guide_know_v2">Ne, hvala</string>
-  <string name="genimi_wake_up_guide_press_power_and_volume_up_message_v2">Pritisnite tipke za uključivanje/isključivanje i pojačavanje glasnoće da biste isključili uređaj</string>
   <string name="genimi_wake_up_guide_press_power_key_message_for_assistant_v2">Pritisnite i držite tipku za uključivanje/isključivanje %ss da biste pristupili Pomoćniku</string>
   <string name="genimi_wake_up_guide_press_power_key_message_for_gemini_v2">Pritisnite i držite tipku za uključivanje/isključivanje %ss da biste pristupili Geminiju</string>
-  <string name="genimi_wake_up_guide_settings_v2">Prijeđi na Postavke</string>
-  <string name="genimi_wake_up_guide_title_v2">Nadograđene opcije tipke za uključivanje/isključivanje</string>
-  <string name="genimi_wake_up_guide_know">Razumijem</string>
   <string name="genimi_wake_up_guide_press_power_and_volume_up_message">Pritisnite tipke za uključivanje/isključivanje i pojačavanje zvuka za isključivanje ili ponovno pokretanje</string>
+  <string name="genimi_wake_up_guide_press_power_and_volume_up_message_v2">Pritisnite tipke za uključivanje/isključivanje i pojačavanje glasnoće da biste isključili uređaj</string>
   <string name="genimi_wake_up_guide_press_power_key_message">Pritisnite i držite tipku za uključivanje/isključivanje za %ss, zatim otpustite za pristup Geminiju</string>
   <string name="genimi_wake_up_guide_settings">Postavke</string>
+  <string name="genimi_wake_up_guide_settings_v2">Prijeđi na Postavke</string>
   <string name="genimi_wake_up_guide_title">Otvori tipkom za uključivanje</string>
+  <string name="genimi_wake_up_guide_title_v2">Nadograđene opcije tipke za uključivanje/isključivanje</string>
   <string name="gesture_disabled">Isključeno</string>
   <string name="gesture_enable">Uključeno</string>
   <string name="gesture_fullscreen_to_splitscreen">Prebaci na podijeljeni zaslon</string>
@@ -630,6 +634,7 @@ Također, možete ih preuzeti zasebno."</string>
   <string name="key_position_cat">Pozicije tipke</string>
   <string name="key_settings">Prečaci tipke i gesta</string>
   <string name="key_settings_title">Prečaci tipke i gesta</string>
+  <string name="key_stylus_laser_pen_summary">Stisnite olovku da biste uključili lasersku olovku. Otpustite da biste je isključili.</string>
   <string name="key_system_control">Kontrola sustava</string>
   <string name="keyboard_touchpad_click_force">Klik na trackpadu</string>
   <string name="keyboard_touchpad_click_force_medium">Srednje</string>
@@ -981,8 +986,19 @@ Inače možda nećete moći unijeti drugi razmak sa zaključanog zaslona."</stri
   <string name="power_key_how_start_detail">Pritisnite i držite tipku za uključivanje 0,5 s. Otpustite za razgovor.</string>
   <string name="power_key_start_enjoy">Počnite koristiti Google pomoćnika</string>
   <string name="power_key_start_guide">Buđenje Google asistenta pomoću tipke za uključivanje/isključivanje na uređajima s punim zaslonom</string>
+  <string name="power_off_cn_guide_1_open_power_panel">Umjesto toga otvori izbornik za isključivanje</string>
+  <string name="power_off_cn_guide_1_sub_title">Ovo možete promijeniti u bilo kojem trenutku u Postavke > Prečaci gesti > Isključi i ponovno pokreni.</string>
+  <string name="power_off_cn_guide_1_talk_with_xiaoai">Postavi</string>
+  <string name="power_off_cn_guide_1_title">Koristite \"Pritisnite i držite tipku za uključivanje/isključivanje\" za razgovor s Xiaomi Hyper XiaoAi</string>
+  <string name="power_off_cn_guide_2_get">Razumijem</string>
+  <string name="power_off_cn_guide_2_sub_title">Za otvaranje izbornika za isključivanje istovremeno pritisnite i držite tipke za uključivanje/isključivanje i pojačavanje glasnoće.</string>
+  <string name="power_off_cn_guide_2_title">Uspješno postavljeno</string>
+  <string name="power_off_cn_setting_bottom_note_info">Pritisnite i Držite tipku za uključivanje/isključivanje %s sekundi za prisilno ponovno pokretanje uređaja</string>
+  <string name="power_off_cn_setting_press_power_and_volume_up_reboot">Istovremeno pritisnite i držite tipke za uključivanje/isključivanje i pojačavanje glasnoće</string>
+  <string name="power_off_cn_setting_press_power_reboot">Pritisnite i držite tipku za uključivanje/isključivanje %s sekundi</string>
+  <string name="power_off_cn_setting_title">Isključite i ponovno pokrenite uređaj</string>
   <string name="power_off_press_power_and_volume_up_message">Pritisnite tipke za uključivanje/isključivanje i pojačavanje zvuka</string>
-  <string name="power_off_press_power_key_message">Pritisnite i držite gumb za uključivanje %ss</string>
+  <string name="power_off_press_power_key_message">Pritisnite i držite tipku za uključivanje %ss</string>
   <string name="power_off_title">Isključite ili ponovno pokrenite</string>
   <string name="power_off_press_power_and_volume_up_message_v2">Istovremeno pritisnite tipke za uključivanje/isključivanje i pojačavanje glasnoće</string>
   <string name="power_off_press_power_key_message_v2">Pritisnite i držite tipku za uključivanje/isključivanje %ss</string>
@@ -1168,7 +1184,11 @@ za ulazak u Drugi prostor sa Zaklj. zaslona"</string>
   <string name="stop_xspace_alert_content">"Izbrisati sve dvojne aplikacije zajedno s njihovim računima i podacima o aplikacijama? Vaš će se uređaj ponovno pokrenuti kako bi primijenio ovu promjenu."</string>
   <string name="stop_xspace_alert_title">Izbriši račune dvojnih aplikacija</string>
   <string name="strong_suppression_summary">Vaš će uređaj manje reagirati na slučajni dodir, neke kontrole pokretima možda neće raditi blizu rubova</string>
-  <string name="strong_suppression_title">Veliko područje</string>
+  <string name="strong_suppression_title">Veće područje</string>
+  <string name="stylus_action_hover">Zadržite pokazivač miša iznad slike</string>
+  <string name="stylus_application_effects_title">Efekti</string>
+  <string name="stylus_application_title">Aplikacije</string>
+  <string name="stylus_brush_preview">Pregled kista</string>
   <string name="stylus_btn_continue">Dalje</string>
   <string name="stylus_btn_learn">Udžbenik</string>
   <string name="stylus_btn_quick_write">Pisanje</string>
@@ -1183,14 +1203,30 @@ za ulazak u Drugi prostor sa Zaklj. zaslona"</string>
   <string name="stylus_connect_fail_not_open_gps">"Nije moguće povezati se. Uključite usluge lokacije i pokušajte ponovno."</string>
   <string name="stylus_connecting">Povezivanje…</string>
   <string name="stylus_dislocation_summary">Ovdje pričvrstite olovku</string>
+  <string name="stylus_display_color_wheel">Prikaži kotač boja</string>
+  <string name="stylus_display_shortcut_function">Prikaži ploču s prečacima</string>
+  <string name="stylus_double_click_summary">Dvaput dodirnite olovku za brzu promjenu alata u aplikaciji</string>
+  <string name="stylus_double_click_title">Dvaput pritisnite</string>
+  <string name="stylus_exit_title">Izlaz</string>
+  <string name="stylus_exit_title_summary">Dvaput dodirnite olovku za brisanje crteža ili izlaz iz laserskog načina rada</string>
   <string name="stylus_focus_welcome">Upoznajte Xiaomi Focus Pen</string>
   <string name="stylus_function_and_action">Značajke</string>
+  <string name="stylus_function_create_notes">Nova bilješka</string>
+  <string name="stylus_function_hyper_xiaoai">Xiaomi Hyper XiaoAi</string>
+  <string name="stylus_function_partial_screenshot">Djelomična snimka zaslona</string>
+  <string name="stylus_function_screen_recognition">Prepoznavanje zaslona</string>
+  <string name="stylus_function_settings_title">Postavke funkcija</string>
   <string name="stylus_function_summary">Značajke</string>
+  <string name="stylus_function_title">Značajke</string>
+  <string name="stylus_function_virtual_laser">Pokazivač</string>
+  <string name="stylus_function_virtual_laser_summary">Odaberite laserski alat s ploče prečaca</string>
   <string name="stylus_guide_summary">Uputstva</string>
   <string name="stylus_keyboard_settings_title">Olovka &amp; tipkovnica</string>
   <string name="stylus_language_summary">Prepoznavanje brojeva i rukom pisanog teksta na engleskom i još jednom odabranom jeziku</string>
-  <string name="stylus_laser_key_name">Svjetlo pažnje</string>
-  <string name="stylus_laser_summary">Pritisnite i držite tipku reflektora da biste zaokružili područja fokusa</string>
+  <string name="stylus_laser_key_name">Pokazivač</string>
+  <string name="stylus_laser_pen_summary">Koristite olovku kao laserski pokazivač ili za crtanje istaknutih dijelova</string>
+  <string name="stylus_laser_pen_title">Laserska olovka</string>
+  <string name="stylus_laser_summary">Pritisnite i držite tipku pokazivača da biste zaokružili područja fokusa</string>
   <string name="stylus_laser_title">Osvijetli područja</string>
   <string name="stylus_not_connect_message">"Olovka nije spojena"</string>
   <string name="stylus_not_connect_message_new">Priključite svoju olovku za uparivanje</string>
@@ -1227,8 +1263,16 @@ za ulazak u Drugi prostor sa Zaklj. zaslona"</string>
   <string name="stylus_ota_update_failed">"Nije moguće ažurirati firmver"</string>
   <string name="stylus_ota_updating">Ažuriranje</string>
   <string name="stylus_pen_mask_text">Dodirnite zaslon za početak pisanja</string>
+  <string name="stylus_pinch_high_trigger_pressure">Čvrsto</string>
+  <string name="stylus_pinch_low_trigger_pressure">Lagano</string>
+  <string name="stylus_pinch_pressure_adjust_title">Intenzitet štipanja</string>
+  <string name="stylus_pinch_summary">Stisnite olovku da biste otvorili panel s prečacima</string>
+  <string name="stylus_pinch_title">Štipanje</string>
+  <string name="stylus_pinch_trigger_pressure_guide">"Odaberite koliko je pritiska potrebno za korištenje štipanja."</string>
   <string name="stylus_primary_key">Prva tipka</string>
+  <string name="stylus_projection">Projekcija</string>
   <string name="stylus_quick_note_summary">Kada je zaslon isključen, dodirnite ga olovkom da počnete pisati. Ova značajka povećava potrošnju energije.</string>
+  <string name="stylus_quick_operations_summary">Stisnite olovku da biste otvorili panel s prečacima, dvaput dodirnite za promjenu alata i povucite prstom gore ili dolje za daljinsko okretanje stranica</string>
   <string name="stylus_quick_note_title">Pišite s isključenim zaslonom</string>
   <string name="stylus_quick_write">Pišite</string>
   <string name="stylus_quick_write_creator_summary">Pritisnite i držite tipku za pisanje kako biste otvorili Mi Canvas</string>
@@ -1239,8 +1283,17 @@ za ulazak u Drugi prostor sa Zaklj. zaslona"</string>
   <string name="stylus_settings_title">Olovka</string>
   <string name="stylus_shortcut_actions_summary">Pritisnite i držite prvi tipku za pisanje. Pritisnite i držite drugu tipku za snimanje zaslona.</string>
   <string name="stylus_shortcut_actions_title">Brze radnje</string>
+  <string name="stylus_shortcut_function_title">Panel prečaca</string>
   <string name="stylus_shortcut_title_note">Pisanje</string>
   <string name="stylus_shortcut_title_screenshot">Snimak zaslona</string>
+  <string name="stylus_show_brush_parameters">Prikaži postavke kista</string>
+  <string name="stylus_slide_up_down_summary">Povucite olovku gore ili dolje za daljinsko okretanje stranica ili podešavanje debljine kista</string>
+  <string name="stylus_slide_up_down_title">Povucite gore ili dolje</string>
+  <string name="stylus_switch_current_brush_and_last_brush">Prebaci se na prethodni kist</string>
+  <string name="stylus_switch_pen_and_eraser">Prebacivanje između kista i gumice</string>
+  <string name="stylus_touch_film_action_title">Radnje</string>
+  <string name="stylus_touch_film_close">Isključeno</string>
+  <string name="stylus_touch_film_settings_guide">Postavke</string>
   <string name="stylus_success">Gotovo</string>
   <string name="stylus_vice_key">Druga tipka</string>
   <string name="stylus_welcome">Upoznajte Xiaomi Smart Pen</string>
