--- a/Croatian/main/Contacts.apk/res/values-hr/strings.xml
+++ b/Croatian/main/Contacts.apk/res/values-hr/strings.xml
@@ -801,7 +801,8 @@ Razlog: \"%s\""</string>
   <string name="miprofile_nick_name_divider">"  |  "</string>
   <string name="miprofile_notice_close">Zatvori</string>
   <string name="miprofile_switch_off_alertdialog_message">"Nećete moći razmjenjivati kontakt kartice s drugim ljudima."</string>
-  <string name="missing_name">"(Bez imena)"</string>
+  <string name="missed_call">Propušteni poziv</string>
+  <string name="missing_name">(Bez imena)</string>
   <string name="missing_required_permission">Onemogućili ste potrebno dopuštenje.</string>
   <string name="miuix_access_state_desc">Odabrano</string>
   <string name="miuix_accessibility_title">Naslov</string>
