--- a/Croatian/main/MiSettings.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiSettings.apk/res/values-hr/strings.xml
@@ -510,7 +510,9 @@ nije generirana u Drugom prostoru"</string>
   <string name="minors_boot_dialog_positive">Uključi</string>
   <string name="minors_mode_name">Diječji način</string>
   <string name="minors_negativeButton">Odustani</string>
-  <string name="minors_not_allow_apps_hint">"Ne možete koristiti ovu aplikaciju u dječjem načinu rada"</string>
+  <string name="minors_not_allow_apps_hint">"Ne možete koristiti ovu aplikaciju u Dječjem načinu rada"</string>
+  <string name="minors_should_open">Uključiti Dječji način rada sada?</string>
+  <string name="minors_should_open_summary">Pomoću Dječjeg načina rada možete pomoći maloljetnicima da razviju zdrave navike korištenja uređaja. Uključiti sada?</string>
   <string name="miuix_access_state_desc">Odabrano</string>
   <string name="miuix_appcompat_accessibility_collapse_state">Sažet</string>
   <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
