--- a/Croatian/main/MiuiHome.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiuiHome.apk/res/values-hr/strings.xml
@@ -542,6 +542,7 @@ Poboljšana sigurnost."</string>
   <string name="loading_wallpaper">Samo trenutak…</string>
   <string name="local_apps">Lokalne aplikacije</string>
   <string name="local_wallpaper">Preuzeto</string>
+  <string name="locate_apps_launcher_loading_tips">Početni zaslon se još uvijek učitava. Pokušajte ponovno za trenutak.</string>
   <string name="lock_screen">Zaklj. zaslon</string>
   <string name="lock_screen_cells_title">Zaključaj raspored Početnog zaslona</string>
   <string name="lock_screen_failed_message">"Ne mogu postaviti pozadinu Zaklj. zaslona"</string>
@@ -984,6 +985,7 @@ Poboljšana sigurnost."</string>
   <string name="search_bar_hint_content">Traženje aplikacija i sadržaja</string>
   <string name="search_guide_btn">Razumijem</string>
   <string name="search_in_apps_store">Traži \"%1$s\" u %2$s</string>
+  <string name="search_indicator">Traži</string>
   <string name="search_menu_title">Traži</string>
   <string name="search_no_result">"Ne mogu pronaći rezultate"</string>
   <string name="select_all">Odaberi sve</string>
